--- a/integration-testing/docker/bundle-ubuntu-install-tests/Dockerfile
+++ b/integration-testing/docker/bundle-ubuntu-install-tests/Dockerfile
@@ -10,6 +10,12 @@ RUN echo "BUNDLE!!!: $bundle"
 
 RUN echo "REPO!!!: $repo"
 
+
+
+
+# WORK AROUND A DEBIAN DOCKER ISSUE
+RUN printf '#!/bin/sh\nexit 0' > /usr/sbin/policy-rc.d
+
 #Copy test script
 COPY ./ps_install_bundle.sh /usr/bin/ps_install_bundle.sh
 RUN chmod 755 /usr/bin/ps_install_bundle.sh
@@ -27,6 +33,10 @@ RUN apt-get update
 RUN apt-get install -y wget
 RUN apt-get install -y gnupg
 
+# Add APT repo Universe
+RUN add-apt-repository universe
+
+
 RUN wget -qO - http://downloads.perfsonar.net/debian/perfsonar-official.gpg.key | apt-key add -
 RUN wget -qO - http://downloads.perfsonar.net/debian/perfsonar-snapshot.gpg.key | apt-key add -
 
@@ -37,6 +47,7 @@ VOLUME /sys/fs/cgroup
 
 #Let docker know that pscheduler listens on 443
 EXPOSE 443
+
 
 #Keep container running
 #CMD tail -f /dev/null
