--- a/integration-testing/docker/bundle-deb-install-tests/docker-compose.yml
+++ b/integration-testing/docker/bundle-deb-install-tests/docker-compose.yml
@@ -1,32 +1,27 @@
-version: '3.5'
+# tmpfs and volumes are needed for systemd to work properly
+version: '3.8'
 services:
-  debian_clean:
-    container_name: deb-install-transient
-    #image: perfsonar/dev-centos-clean:latest
+  install_test:
+    container_name: install-test
     privileged: true
     build:
-        context: .
-        dockerfile: Dockerfile
-        #args:
-        #    repos:
-        #        - perfsonar-tools
-        #        - perfsonar-testpoint
-    tmpfs: 
-       - /run
-       - /tmp
+      context: .
+      dockerfile: Dockerfile
+      args:
+        OSimage: "$OSimage"
+        REPO: "$REPO"
+    tmpfs:
+      - /run
+      - /tmp
     volumes:
-       - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
     networks:
-       - bundle_testing
+      - bundle_testing
     ports:
        - "8443:443"
-    ulimits:
-       nproc: 65535
-       nofile:
-           soft: 20000
-           hard: 40000
 
 networks:
   bundle_testing:
     name: bundle_testing
     driver: bridge
+
