Simplyfing use of proxy (see README) Adding debug_install.sh script to debug a failing installation. Using curl instead of wget to setup repository and GPG keys. Using `docker compose` instead of `docker-compose` for most commands. Removing what I think is a not needed additional network `bundle_testing` so to use only the default network to run tests.

--- a/integration-testing/docker/bundle-deb-install-tests/docker-compose.yml
+++ b/integration-testing/docker/bundle-deb-install-tests/docker-compose.yml
@@ -10,18 +10,13 @@ services:
       args:
         OSimage: "$OSimage"
         REPO: "$REPO"
+        useproxy: "${useproxy:-no}"
+        proxy: "$proxy"
     tmpfs:
       - /run
       - /tmp
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    networks:
-      - bundle_testing
     ports:
        - "8443:443"
-
-networks:
-  bundle_testing:
-    name: bundle_testing
-    driver: bridge
 
