Adding a pscheduler-api debug script to use in testing image when install or test failed.

--- a/integration-testing/docker/bundle-deb-install-tests/docker-compose.yml
+++ b/integration-testing/docker/bundle-deb-install-tests/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         REPO: "$REPO"
         useproxy: "${useproxy:-no}"
         proxy: "$proxy"
-    image: install_$OSimage_$REPO
+    image: $REPO/$OSimage
     tmpfs:
       - /run
       - /tmp
