--- a/integration-testing/docker/bundle-deb-install-tests/docker-compose.yml
+++ b/integration-testing/docker/bundle-deb-install-tests/docker-compose.yml
@@ -1,24 +1,56 @@
 ### Required setup for the install test images.
 # tmpfs and volumes are needed for systemd to work properly
 # ARGS can be setup by the testing script, see README
+
+# Some defaults
+x-ports:
+  &default-ports
+  - "8443:443"
+
+x-tmpfs:
+  &default-tmpfs
+  - /run
+  - /run/lock
+  - /tmp
+
+# Services
 version: '3.9'
 services:
-  install_test:
-    container_name: install-test
+  install_test_buster:
+    container_name: install-test-buster
+    privileged: true
+    image: $REPO/debian:buster
+    tmpfs: *default-tmpfs
+
+  install_test_bullseye:
+    container_name: install-test-bullseye
+    privileged: true
+    image: $REPO/debian:bullseye
+    tmpfs: *default-tmpfs
+
+  install_test_bionic:
+    container_name: install-test-bionic
+    privileged: true
+    image: $REPO/ubuntu:bionic
+    tmpfs: *default-tmpfs
+
+  install_test_focal:
+    container_name: install-test-focal
+    privileged: true
+    image: $REPO/ubuntu:focal
+    tmpfs: *default-tmpfs
+
+  install_test_jammy:
+    container_name: install-test-jammy
+    privileged: true
+    image: $REPO/ubuntu:jammy
+    tmpfs: *default-tmpfs
+
+  single_sanity:
+    container_name: install-single-sanity
     privileged: true
     build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        OSimage: "$OSimage"
-        REPO: "$REPO"
-        useproxy: "${useproxy:-without}"
-        proxy: "${proxy:-}"
-    image: $REPO/$OSimage
-    tmpfs:
-      - /run
-      - /run/lock
-      - /tmp
-    ports:
-       - "8443:443"
+      context: ../../../sanity-checking/
+      dockerfile: Dockerfile-single
+    image: single-sanity
 
