Updating docker rpm scripts

--- a/integration-testing/docker/bundle-rpm-install-tests/Dockerfile
+++ b/integration-testing/docker/bundle-rpm-install-tests/Dockerfile
@@ -1,48 +1,76 @@
-FROM centos:7
+# perfSONAR install ready image
+
+### Globally scoped ARG, defined here to be available to use in FROM statements
+# Do we want to use a proxy?
+ARG useproxy=without
+# TODO: move to pS provided base OS image
+# OS image to use as a base
+ARG OSimage=centos:7
+FROM ${OSimage} AS base
+
+# Some sane defaults
+ENV LC_ALL=C
 ENV container docker
-ARG bundle
-ARG repo
 
-RUN echo "BUNDLE!!!: $bundle"
+# If you want to use a proxy to speed up download both at build time and test time (docker run)
+# Trick built on top of https://medium.com/@tonistiigi/advanced-multi-stage-build-patterns-6f741b852fae
+FROM base AS base-with-proxy
+ARG proxy
+ENV http_proxy=http://${proxy}
+ENV https_proxy=https://${proxy}
+ENV no_proxy=localhost,127.0.0.1
 
-RUN echo "REPO!!!: $repo"
+FROM base AS base-without-proxy
+ENV http_proxy=
+ENV https_proxy=
+ENV no_proxy=
 
-#Copy test script
-COPY ./ps_install_bundle.sh /usr/bin/ps_install_bundle.sh
-RUN chmod 755 /usr/bin/ps_install_bundle.sh
+FROM base-${useproxy}-proxy AS install-image
+RUN echo "Install image proxy is: ${https_proxy:-none}"
+RUN yum update -y && yum install -y \
+        epel-release \
+        curl \
+        gnupg \
+        systemd \
+        systemd-sysv && \
+    yum autoremove -y && \
+    yum clean all && \
+    rm -rf /tmp/* /var/tmp/*
 
-#cleanup to enable systemd
-RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; do [ $i == \
-    systemd-tmpfiles-setup.service ] || rm -f $i; done); \
-    rm -f /lib/systemd/system/multi-user.target.wants/*;\
-    rm -f /etc/systemd/system/*.wants/*;\
-    rm -f /lib/systemd/system/local-fs.target.wants/*; \
-    rm -f /lib/systemd/system/sockets.target.wants/*udev*; \
-    rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
-    rm -f /lib/systemd/system/basic.target.wants/*;\
-    rm -f /lib/systemd/system/anaconda.target.wants/*;
+# To make systemd work properly
+# From https://github.com/j8r/dockerfiles/tree/master/systemd
+# List for C7
+RUN cd /lib/systemd/system/sysinit.target.wants/; \
+    for i in *; do [ $i = systemd-tmpfiles-setup.service ] || rm -f $i; done
+RUN rm -f /lib/systemd/system/multi-user.target.wants/* \
+    /etc/systemd/system/*.wants/* \
+    /lib/systemd/system/local-fs.target.wants/* \
+    /lib/systemd/system/sockets.target.wants/*udev* \
+    /lib/systemd/system/sockets.target.wants/*initctl* \
+    /lib/systemd/system/basic.target.wants/* \
+    /lib/systemd/system/anaconda.target.wants/*
 
-#Install repos we will use in testing
-RUN yum clean all && \
+## REPO:
+# perfSONAR-repo
+# perfSONAR-repo-nightly-minor
+# perfSONAR-repo-nightly-patch
+# perfSONAR-repo-staging
+
+# Configure perfSONAR repository and GPG key
+ARG REPO
+RUN echo "Adding perfSONAR repository: $REPO"
+RUN rpm -hUv http://software.internet2.edu/rpms/el7/x86_64/latest/packages/perfSONAR-${REPO#"perfsonar-"}-0.10-1.noarch.rpm && \
     yum update -y && \
-    yum install -y epel-release && \
-    yum install -y http://linux.mirrors.es.net/perfsonar/el7/x86_64/4/packages/perfSONAR-repo-0.10-1.noarch.rpm
-    #yum install -y http://software.internet2.edu/rpms/el7/x86_64/4.2.4/RPMS/perfSONAR-repo-0.9-1.noarch.rpm && \
-    #yum install -y http://linux.mirrors.es.net/perfsonar/el7/x86_64/4/packages/perfSONAR-repo-nightly-minor-0.10-1.noarch.rpm 
-    #yum install -y http://linux.mirrors.es.net/perfsonar/el7/x86_64/4/packages/perfSONAR-repo-nightly-patch-0.9-1.noarch.rpm && \
-    #yum install -y http://linux.mirrors.es.net/perfsonar/el7/x86_64/4/packages/perfSONAR-repo-staging-0.9-1.noarch.rpm && \
-    #sed -i 's/enabled = 1/enabled = 0/' /etc/yum.repos.d/perfSONA*.repo && \
-    #yum clean all && \ 
-    #yum install -y perfsonar-testpoint
-    #yum install -y $bundle
+    yum autoremove -y && \
+    yum clean all && \
+    rm -rf /tmp/* /var/tmp/*
 
+# Copy test script
+COPY ./ps_install_bundle.sh /usr/local/bin/ps_install_bundle.sh
+RUN chmod 755 /usr/local/bin/ps_install_bundle.sh
 
-#shared volumes
-VOLUME /sys/fs/cgroup
-
-#Let docker know that pscheduler listens on 443
+# Let docker know that pscheduler listens on 443
 EXPOSE 443
 
-#Keep container running
-#CMD tail -f /dev/null
+# Start systemd
 CMD ["/usr/sbin/init"]
