Also ignoring ::1 for the proxy access.

--- a/integration-testing/docker/bundle-deb-install-tests/Dockerfile
+++ b/integration-testing/docker/bundle-deb-install-tests/Dockerfile
@@ -18,7 +18,7 @@ FROM base AS base-with-proxy
 ARG proxy
 ENV http_proxy=http://${proxy}
 ENV https_proxy=https://${proxy}
-ENV no_proxy=localhost,127.0.0.1
+ENV no_proxy=localhost,127.0.0.1,::1
 
 FROM base AS base-without-proxy
 ENV http_proxy=
